--- a/assets/mail_templates/account.template.html
+++ b/assets/mail_templates/account.template.html
@@ -93,7 +93,7 @@
                       style="border-radius: 6px"
                     >
                       <a
-                        href="http://localhost/newsLetter/index.php"
+                        href="{{LINK}}"
                         target="_blank"
                         style="
                           display: inline-block;
