--- a/assets/mail_templates/signin.template.html
+++ b/assets/mail_templates/signin.template.html
@@ -123,7 +123,7 @@
                       style="border-radius: 6px"
                     >
                       <a
-                        href="http://localhost/newsLetter/dashboard.php"
+                        href="{{LINK}}"
                         target="_blank"
                         style="
                           display: inline-block;
